// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has more disables load more 1`] = `
<ForwardRef(forwardRef)
  data-testid="profile-commentHistory"
  size="double"
>
  <Localized
    id="profile-historyComment-commentHistory"
  >
    <ForwardRef(forwardRef)
      variant="heading3"
    >
      Comment History
    </ForwardRef(forwardRef)>
  </Localized>
  <withContext(createMutationContainer(Relay(HistoryCommentContainer)))
    comment={
      Object {
        "id": "comment-1",
      }
    }
    story={Object {}}
  />
  <withContext(createMutationContainer(Relay(HistoryCommentContainer)))
    comment={
      Object {
        "id": "comment-2",
      }
    }
    story={Object {}}
  />
  <Localized
    id="profile-commentHistory-loadMore"
  >
    <ForwardRef(forwardRef)
      aria-controls="coral-profile-commentHistory-log"
      disabled={true}
      fullWidth={true}
      id="coral-profile-commentHistory-loadMore"
      onClick={[Function]}
      variant="outlined"
    >
      Load More
    </ForwardRef(forwardRef)>
  </Localized>
</ForwardRef(forwardRef)>
`;

exports[`has more renders correctly 1`] = `
<ForwardRef(forwardRef)
  data-testid="profile-commentHistory"
  size="double"
>
  <Localized
    id="profile-historyComment-commentHistory"
  >
    <ForwardRef(forwardRef)
      variant="heading3"
    >
      Comment History
    </ForwardRef(forwardRef)>
  </Localized>
  <withContext(createMutationContainer(Relay(HistoryCommentContainer)))
    comment={
      Object {
        "id": "comment-1",
      }
    }
    story={Object {}}
  />
  <withContext(createMutationContainer(Relay(HistoryCommentContainer)))
    comment={
      Object {
        "id": "comment-2",
      }
    }
    story={Object {}}
  />
  <Localized
    id="profile-commentHistory-loadMore"
  >
    <ForwardRef(forwardRef)
      aria-controls="coral-profile-commentHistory-log"
      disabled={false}
      fullWidth={true}
      id="coral-profile-commentHistory-loadMore"
      onClick={[Function]}
      variant="outlined"
    >
      Load More
    </ForwardRef(forwardRef)>
  </Localized>
</ForwardRef(forwardRef)>
`;

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  data-testid="profile-commentHistory"
  size="double"
>
  <Localized
    id="profile-historyComment-commentHistory"
  >
    <ForwardRef(forwardRef)
      variant="heading3"
    >
      Comment History
    </ForwardRef(forwardRef)>
  </Localized>
  <withContext(createMutationContainer(Relay(HistoryCommentContainer)))
    comment={
      Object {
        "id": "comment-1",
      }
    }
    story={Object {}}
  />
  <withContext(createMutationContainer(Relay(HistoryCommentContainer)))
    comment={
      Object {
        "id": "comment-2",
      }
    }
    story={Object {}}
  />
</ForwardRef(forwardRef)>
`;
